--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/_leftMenu1.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/_leftMenu1.cshtml
@@ -15,16 +15,16 @@
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("Create","DotToChucHM")" class="d-flex">
+                    <a href="@Url.Action("Index","DVLK")" class="d-flex">
                         <p>Đăng bài</p>
                     </a>
-                </li> 
+                </li>
                 <li>
                     <a href="@Url.Action("DanhSachDangKy","DVLK")" class="d-flex">
                         <p>Danh sách đăng ký</p>
                     </a>
                 </li>
-                
+
             </ul>
         </aside>
         <aside class="single_sidebar_widget post_category_widget">
@@ -39,7 +39,7 @@
                     <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
                         <p>Xem lịch sử</p>
                     </a>
-                </li>              
+                </li>
                 <li>
                     <a href="@Url.Action("DoiMK","NguoiDung")" class="d-flex">
                         <p>Đổi mật khẩu</p>
@@ -70,13 +70,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
-                        <p>Gửi yêu cầu</p>
+                    <a href="@Url.Action("Index","NhanVienYTe") " class="d-flex">
+                        <p>Cập nhật nhân viên</p>
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("Index","NhanVienYTe") " class="d-flex">
-                        <p>Cập nhật nhân viên</p>
+                    <a href="@Url.Action("XemNV","NhanVienYTe")" class="d-flex">
+                        <p>Xem nhiệm vụ</p>
                     </a>
                 </li>
                 <li>
@@ -87,6 +87,11 @@
                 <li>
                     <a href="@Url.Action("Index","NguoiDung")" class="d-flex">
                         <p>Cập nhật thông tin cá nhân</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="d-flex">
+                        <p>Gửi yêu cầu</p>
                     </a>
                 </li>
             </ul>
@@ -127,7 +132,7 @@
                     <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
                         <p>Xem lịch sử</p>
                     </a>
-                </li>               
+                </li>
                 <li>
                     <a href="@Url.Action("DoiMK","NguoiDung")" class="d-flex">
                         <p>Đổi mật khẩu</p>
@@ -150,7 +155,7 @@
                     <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
                         <p>Xem lịch sử</p>
                     </a>
-                </li>                
+                </li>
                 <li>
                     <a href="@Url.Action("DoiMK","NguoiDung")" class="d-flex">
                         <p>Đổi mật khẩu</p>
