--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/ChiTietDTCHM.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/ChiTietDTCHM.cshtml
@@ -1,4 +1,4 @@
-﻿@model Models.EF.DotToChucHM
+﻿@model Models.ViewModel.BaiDangView
 
 @{
     ViewBag.Title = "Chi tiết đợt tổ chức";
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 posts-list">
-                   
+
                     <div class="single-post">
                         <div class="feature-img">
                             <img class="card-img rounded-0" src="~/Assets/client/img/blog/single_blog_10.png" alt="">
@@ -38,7 +38,7 @@
                             <ul class="blog-info-link mt-3 mb-4">
                                 <li><a href="#"> <b style="color:black">  Thời gian tổ chức:</b> </a></li>
                                 <li><a href="#"><i class="far fa-user"></i> @Html.DisplayFor(model => model.ngayToChuc)  </a></li>
-                    
+
                             </ul>
                             <div class="quote-wrapper">
                                 Thông tin
@@ -84,6 +84,19 @@
                                                 <a>Người đăng bài: </a>@Html.DisplayFor(model => model.tenNguoiDangBai)
                                             </th>
                                         </tr>
+                                        <tr>
+                                            <th>
+                                                <a>Đơn vị thực hiện: </a>@Html.DisplayFor(model => model.tenBV)
+                                                <a>- Số điện thoại: </a>@Html.DisplayFor(model => model.sdtBV)
+
+                                            </th>
+                                        </tr>
+                                        <tr>
+                                            <th>
+                                                <a>Đơn vị liên kết: </a>@Html.DisplayFor(model => model.tenDVLK)
+                                                <a>- Số điện thoại: </a>@Html.DisplayFor(model => model.sdtDVLK)
+                                            </th>
+                                        </tr>
                                     </table>
                                 </div>
                             </div>
@@ -105,21 +118,18 @@
                                 @if (session7 == null)
                                 {
                                     <li>
-                                        <a class="genric-btn warning" href="@Url.Action("Index", "LoginClient") ">Hãy đăng nhập</a>
+                                        <button class="genric-btn warning" href="@Url.Action("Index", "LoginClient") ">Hãy đăng nhập</button>
                                     </li>
+
                                 }
-                                else
+                                else if (session7.AuthorID == "Q04" || session7.AuthorID == "Q02" || session7.AuthorID == "Q01")
                                 {
                                     <li>
-                                        <a class="genric-btn info radius" href="@Url.Action("DangKyHiemMau", "DTCHM")">Đăng ký</a>
+                                        <button class="genric-btn warning" href="@Url.Action("Index", "LoginClient") ">Tài khoản không hợp lệ</button> (vui lòng sử dụng tài khoản cá nhân)
                                     </li>
                                 }
-                                @*@if (session7.AuthorID == "Q04")
-                {
-                    <li>
-                        <a class="genric-btn warning" href="@Url.Action("Index", "LoginClient") ">Tài khoản không hợp lệ</a> (vui lòng sử dụng tài khoản cá nhân)
-                    </li>
-                }*@
+
+
                             </ul>
                         }
 
@@ -154,4 +164,4 @@
             </div>
         </div>
     </section>
-                                }
+}
