--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/_leftMenu2.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/_leftMenu2.cshtml
@@ -15,7 +15,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("Create","DotToChucHM")" class="d-flex">
+                    <a href="@Url.Action("Index","DVLK")" class="d-flex">
                         <p>Đăng bài</p>
                     </a>
                 </li>
@@ -70,13 +70,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
-                        <p>Gửi yêu cầu</p>
+                    <a href="@Url.Action("Index","NhanVienYTe") " class="d-flex">
+                        <p>Cập nhật nhân viên</p>
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("Index","NhanVienYTe") " class="d-flex">
-                        <p>Danh sách nhân viên</p>
+                    <a href="@Url.Action("XemNV","NhanVienYTe")" class="d-flex">
+                        <p>Xem nhiệm vụ</p>
                     </a>
                 </li>
                 <li>
@@ -87,6 +87,11 @@
                 <li>
                     <a href="@Url.Action("Index","NguoiDung")" class="d-flex">
                         <p>Cập nhật thông tin cá nhân</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="d-flex">
+                        <p>Gửi yêu cầu</p>
                     </a>
                 </li>
             </ul>
